added npm run script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repository contains the labs for the course Computer Graphics at the Johannes Kepler University Linz, Austria.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node index.js"
   },
   "keywords": [],
   "author": "",
